--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,13 @@
     		<version>7.7.1</version>
     		<scope>test</scope>
 		</dependency>
+<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+<dependency>
+    <groupId>io.github.bonigarcia</groupId>
+    <artifactId>webdrivermanager</artifactId>
+    <version>5.9.2</version>
+</dependency>
+
     </dependencies>
 
 
